Added xml files for indexer, refactored.